os_scripts/write_files_in_python.txt
>>> with open("novel.txt", "w") as file:
...     file.write("It was a dark and stormy night")
... 30
  File "<stdin>", line 3
    30
    ^^
SyntaxError: invalid syntax
>>> 
>>> 
>>> 30
30
>>> 30
30
